--- a/Hangman_js/home.html
+++ b/Hangman_js/home.html
@@ -11,15 +11,18 @@
 <body>
     <div class="main">
         <div class="container">
-            <h1>HANGMAN</h1>
+            <h1>HANG MAN</h1>
             <h2>made of Vanilla JS</h2>
         </div>
         <div class="container">
             <p>Click the alphabet button</p>
             <div class="btnClass"></div>
             <div class="word"></div>
-            <div class="lives"></div>
-            <div class="clues"></div>
+            <div class="currentState">
+                <div>
+                    <p>Your life left : 10</p>
+                </div>
+            </div>
         </div>
     </div>
     <script src="hangmanJS.js"></script>
