--- a/Hangman_js/home.html
+++ b/Hangman_js/home.html
@@ -18,10 +18,12 @@
             <p>Click the alphabet button</p>
             <div class="btnClass"></div>
             <div class="word"></div>
-            <div class="currentState">
-                <div>
-                    <p>Your life left : 10</p>
-                </div>
+            <div>
+                <p id="currentState">Hi there!</p>
+                <p id="gameMsg"></p>
+            </div>
+            <div>
+                <button type="button" class="btn btn-dark resetBtn">RESET</button>
             </div>
         </div>
     </div>
