--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="./style/style.css">
     <title>Tetris</title>
 </head>
 <body>
     <div class="container">
-        <div class="score"></div>
-        <div class="playground"></div>
+        <div class="score">0</div>
+        <div class="blockArea">
             <ul></ul>
-
+        </div>
     </div>
-    <script src=""></script>
+    <script src="js/tetris.js"></script>
 </body>
 </html>
