--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style/style.css">
     <title>Tetris</title>
@@ -9,10 +8,11 @@
 <body>
     <div class="container">
         <div class="score">0</div>
-        <div class="blockArea">
-            <ul></ul>
+        <div class="blockarea">
+            <ul>
+            </ul>
         </div>
     </div>
-    <script src="js/tetris.js"></script>
+    <script src="./js/tetris.js"></script>
 </body>
 </html>
