--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
 </head>
 <body>
     <div class="container">
+        <div class="gametext">
+            <span>게임종료</span>
+            <button>다시시작</button>
+        </div>
         <div class="score">0</div>
         <div class="blockarea">
             <ul></ul>
         </div>
     </div>
-    <script src="./js/tetris.js"></script>
+    <script src="./js/tetris.js" type="module"></script>
 </body>
 </html>
