Add shownextblock func

--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
             <span>Game Over</span>
             <button>Restart</button>
         </div>
+        <div class="pause">
+            <span>
+                Pause the Game<br>
+                Press 'P' button
+            </span>
+        </div>
 
         <div class="blockarea">
             <ul></ul>
@@ -22,7 +28,9 @@
             </div>
             <div class="nextblockarea">
                 <p>Next Block</p>
-                <div class="nextblock"></div>
+                <div class="nextblock">
+                    <ul></ul>
+                </div>
             </div>
             <div class="keyinfo">
                 <span>
